--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "restify": "~4.0.0"
+    "express": "~4.13.3",
+    "body-parser": "~1.13.3"
   }
 }
