--- a/client/bower.json
+++ b/client/bower.json
@@ -13,6 +13,8 @@
     "tests"
   ],
   "dependencies": {
+    "angular": "~1.4.5",
+    "angular-route": "~1.4.5",
     "jquery": "~2.1.4",
     "normalize-css": "normalize.css#~3.0.3"
   }
